# databricks-dlt-pipeline

./: .gitignore  .gitlab-ci.yml  README.md  databricks.yml  pyproject.toml  workflow.yml
.github/workflows/: pipeline.yml
bundles/app/: databricks.yml  workflow.yml
bundles/foundation/: databricks.yml  workflow.yml
explorations/: data_creation.py  exploration.py
transformations/: materialize_customers_table_AutoCDC.py  materialized_view_tracking_user_changes_info.py  my_transformation.py  silver_layer.py  track_update_history_SCD2.py
utilities/: bronze.py  materialize_1.py  materialize_aggregates.py  scd2.py  silver.py
